--- a/client/src/app/edit-product/edit-product.component.html
+++ b/client/src/app/edit-product/edit-product.component.html
@@ -1,1 +1,14 @@
-<p>edit-product works!</p>
+<h2>{{ this.id ? 'Edit' : 'Create' }} product</h2>
+
+<form [formGroup]="editProductForm" (ngSubmit)="save()">
+  <mat-form-field>
+    <mat-label>Address</mat-label>
+    <textarea matInput placeholder="Ex. 100 Main St" formControlName="name">1600 Amphitheatre Pkwy</textarea>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Address 2</mat-label>
+    <textarea matInput formControlName="currentPrice"></textarea>
+  </mat-form-field>
+  <button type="submit" mat-flat-button color="primary">Primary</button>
+</form>
