--- a/client/src/app/edit-product/edit-product.component.html
+++ b/client/src/app/edit-product/edit-product.component.html
@@ -11,5 +11,5 @@
     <textarea matInput formControlName="currentPrice"></textarea>
   </mat-form-field>
 
-  <button type="submit" mat-flat-button color="primary">Primary</button>
+  <button [disabled]="editProductForm.pristine" type="submit" mat-flat-button color="primary">Primary</button>
 </form>
