--- a/client/src/app/app.component.scss
+++ b/client/src/app/app.component.scss
@@ -6,6 +6,10 @@
   flex-direction: column;
 }
 
+.toolbar {
+  padding: 20px 50px;
+}
+
 main {
   padding: 50px;
   flex: 1;
@@ -17,5 +21,5 @@ main {
 
 footer {
   background: #f5f5f5;
-  padding: 15px;
+  padding: 20px 50px;
 }
