--- a/client/src/app/product-item/product-item.component.html
+++ b/client/src/app/product-item/product-item.component.html
@@ -1,15 +1,15 @@
 <mat-card (click)="openEditProductDialog()">
   <mat-card-header>
     <div mat-card-avatar>
-      <img class="avatar" [src]="product.imageUrl" alt="Photo of a Shiba Inu">
+      <img class="avatar" [src]="imageUrl" alt="Photo of a Shiba Inu">
     </div>
 
     <mat-card-title>{{product.name}}</mat-card-title>
 
-    <mat-card-subtitle>{{product.name}}</mat-card-subtitle>
+    <mat-card-subtitle>{{product.category}}</mat-card-subtitle>
   </mat-card-header>
 
-  <img mat-card-image [src]="product.imageUrl" alt="Photo of a Shiba Inu">
+  <img mat-card-image [src]="imageUrl" alt="Photo of a Shiba Inu">
 
   <mat-card-content>
     <mat-list>
