changed architecture to incorpate side effects

--- a/client/src/app/edit-product/edit-product.component.html
+++ b/client/src/app/edit-product/edit-product.component.html
@@ -16,6 +16,8 @@
     <input matInput type="number" placeholder="Current price" formControlName="currentPrice" />
   </mat-form-field>
 
+  <p class="mat-caption">* images are auto-generated for a bit of fun.</p>
+
   <button [disabled]="editProductForm.pristine" type="submit" mat-flat-button color="primary">
     {{ this.id ? 'Update' : 'Create' }}
   </button>
